// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActiveUsers /> should render correctly 1`] = `
<TextContent>
  <Text
    className="pf-u-mt-0"
  >
     
    <Text
      component="a"
      href="https://www.qa.redhat.com/wapps/ugc/protected/usermgt/userList.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      user management list.
    </Text>
  </Text>
</TextContent>
`;

exports[`<ActiveUsers /> should render correctly with description 1`] = `
<TextContent>
  <Text
    className="pf-u-mt-0"
  >
    some description
     
    <Text
      component="a"
      href="https://www.qa.redhat.com/wapps/ugc/protected/usermgt/userList.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      user management list.
    </Text>
  </Text>
</TextContent>
`;

exports[`<ActiveUsers /> should render correctly with link title 1`] = `
<TextContent>
  <Text
    className="pf-u-mt-0"
  >
     
    <Text
      component="a"
      href="https://www.qa.redhat.com/wapps/ugc/protected/usermgt/userList.html"
      rel="noopener noreferrer"
      target="_blank"
    >
      some title
    </Text>
  </Text>
</TextContent>
`;
